# doner-trainer

./: Cargo.toml  README.md
examples/: Cargo.toml  README.md
examples/cg_trainer_demo/: main.rs
examples/gd_trainer_demo/: data.rs  main.rs
examples/lm_trainer_demo/: main.rs
libdt/: Cargo.toml
libdt-macros/: Cargo.toml  README.md
libdt-macros/src/: lib.rs
libdt/src/: lib.rs
libdt/src/layer/: gelu_layer.rs  lin_layer.rs  mod.rs  sigma_layer.rs  softmax_layer.rs  sum_layer.rs
libdt/src/network/: mod.rs
libdt/src/trainer/: cg_trainer.rs  common.rs  gd_trainer.rs  lm_trainer.rs  mod.rs
libdt/tests/: network.rs
utils/: README.md
utils/build_evaluator/: Makefile  main.cpp
