[package]
name = "libdt-macros"
version = "2.0.1"
edition = "2021"
authors = ["Antoni Przybylik <antoni.przybylik@wp.pl>"]
license = "GPL-2.0"
repository = "https://github.com/antoniprzybylik/doner-trainer"
description = "LibDT's macros."

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.29", features = ["extra-traits"] }
quote = "1.0.33"
proc-macro2 = "1.0.66"
